--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,23 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  width: 150px;
+  height: 50px;
+
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+
+  color: #ffffff;
+
+  background: teal;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+}
+
+:disabled {
+  background: rgb(239, 122, 122);
+}
