--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,7 +17,7 @@ img {
   max-width: 100%;
 }
 
-button {
+.btn {
   width: 150px;
   height: 50px;
 
@@ -34,5 +34,50 @@ button {
 }
 
 :disabled {
-  background: rgb(239, 122, 122);
+  background: rgba(120, 120, 120, 0.901);
+}
+
+button {
+  width: 80px;
+  height: 30px;
+
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+
+  color: #ffffff;
+
+  background: rgb(25, 25, 247);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+}
+input {
+  height: 30px;
+  font-size: 16px;
+  color: #212121;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.timer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 15px;
+}
+
+.value {
+  font-size: 50px;
+  font-weight: bold;
+  color: blue;
+}
+.label {
+  font-size: 15px;
+  color: #212121;
 }
